finish this little project, you could now print a complete "Wohnflächenberechnung" after you filled all informations about that, only readme is missing

--- a/css/style.css
+++ b/css/style.css
@@ -1,43 +1,39 @@
 footer .btn {
-    width: 49%
+    width: 49%;
 }
-
+footer .btn.full-btn {
+    width: 100%;
+}
+footer {
+    text-align: center;
+}
 footer {
     margin-bottom: 30px;
 }
-
 .button-group-wrapper {
     display: flex;
 }
-
 .button-group {
     margin-bottom: 20px;
 }
-
 .continue-btn {
     width: 100%;
 }
-
+.empty-table-message {
+    display: none;
+}
 .float-left {
     float: left;
 }
-
 .float-right {
     float: right;
 }
-
 .roomEnd {
     border-bottom: 2px solid #dee2e6;
 }
-
-#room-table {
-    margin-bottom: 100px;
-}
-
 .formsection {
     margin-bottom: 10px;
 }
-
 .btn-info {
     color: #000;
     border-color: #ced4da;
@@ -46,13 +42,25 @@ footer {
     font-weight: 700;
     background-color: #fff;
 }
- /* summary page */
-
+.textarea-wrapper {
+    position: relative;
+}
+.edit-icon {
+    position: absolute;
+    top: -5px;
+    left: 300px;
+    cursor: pointer;
+    color: #777777;
+    cursor: text;
+    font-size: 12px;
+}
+/* summary page */
 @media print {
     body * {
         visibility: hidden;
     }
-    .printable-area, .printable-area * {
+    .printable-area,
+    .printable-area * {
         visibility: visible;
     }
     .printable-area {
@@ -60,47 +68,39 @@ footer {
         left: 0;
         top: 0;
     }
+    .edit-icon {
+        display: none;
+    }
 }
-
 .printable-area-wrapper {
     border: 1px solid black;
     border-radius: 0;
     background-color: #f1f1f1;
     margin: 20px 0px 20px 0px;
 }
-
 .printable-area {
-
-    margin: 30px;
-
     .heading {
         text-align: center;
     }
-
     .heading p {
         font-weight: bold;
     }
-
     .content-wrapper {
         margin: 60px;
     }
-
     .description p {
         margin-bottom: 0px;
         font-weight: 400;
     }
-
     .image {
         height: 180px;
         margin-top: -40px;
     }
-
     #object-address {
         z-index: 2;
         position: relative;
         width: 40%;
     }
-
     .image-placeholder {
         float: right;
         width: 240px;
@@ -112,99 +112,83 @@ footer {
         justify-content: center;
         cursor: pointer;
     }
-
     .image-placeholder img {
         max-width: 240px;
         max-height: 180px;
     }
-
     .hidden-textarea {
         border: none;
         outline: none;
         background: transparent;
-        resize: none; /* Verhindert, dass die Größe der Textarea geändert werden kann */
+        resize: none;
+        /* Verhindert, dass die Größe der Textarea geändert werden kann */
         overflow: hidden;
         width: 100%;
         padding: unset;
     }
-
     .hidden-input {
         border: none;
         outline: none;
         background: transparent;
-        resize: none; /* Verhindert, dass die Größe der Textarea geändert werden kann */
+        resize: none;
+        /* Verhindert, dass die Größe der Textarea geändert werden kann */
         overflow: hidden;
         width: 100%;
         padding: unset;
     }
-
     .small-print {
         margin-top: 80px;
         margin-bottom: 180px;
     }
-
     .new-page {
         page-break-before: always;
         break-before: page;
         margin: 70px;
     }
-
     .person-details {
         margin-top: 50px;
     }
-
     .person-details p {
         font-size: 20px;
         margin: 0;
     }
-
     .person-details textarea {
         font-size: 20px;
         padding: unset;
         color: #000;
     }
-
     .person-author {
         width: 49%;
         display: inline-block;
     }
-
     .person-receiver {
         width: 49%;
         display: inline-block;
     }
-
     .labels {
         width: 49%;
         display: inline-block;
         font-size: 20px;
         margin-bottom: 0px;
     }
-
     .values {
         width: 49%;
         display: inline-block;
         font-size: 20px;
     }
-
     .values textarea {
         font-size: 20px;
     }
-
-
-.labels p {
-        margin-bottom:0px;
+    .labels p {
+        margin-bottom: 0px;
     }
-
     .values p {
-        margin-bottom:0px;
+        margin-bottom: 0px;
     }
-
     .measuring-device {
         margin-top: 20px;
         margin-bottom: 20px;
     }
-
     .signature-box {
         border: 1px solid black;
         padding: 20px;
@@ -214,30 +198,50 @@ footer {
         align-items: stretch;
         margin-bottom: 30px;
     }
-
     .signature-line {
         height: 1px;
         background: black;
         border: solid 1px black;
-        margin-top: 100px;  /* Platz für die Unterschrift */
+        margin-top: 100px;
+        /* Platz für die Unterschrift */
     }
-
     .signature-content {
         display: flex;
         justify-content: space-between;
     }
-
-    .left, .right {
+    .left,
+    .right {
         flex: 1;
     }
-
     .object-details {
         margin-top: 30px;
     }
-
     .room-overview {
         margin-top: 60px;
     }
-
-
+    .text-right {
+        text-align: right;
+    }
+    .roomStart {
+        font-weight: 500;
+    }
+    .roomEnd {
+        font-weight: 500;
+    }
+    .table-legend {
+        text-align: center;
+        margin-bottom: 30px;
+        font-size: 11px;
+        font-weight: 500;
+    }
+    .total {
+        font-weight: 500;
+    }
+    .inline-block {
+        display: inline-block;
+    }
+    #total-wohnflaeche,
+    #total-nutzflaeche {
+        float: right;
+    }
 }
