add some additional stuff (information about dsgvo, clear button on each page, more base informations, and so on)

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,9 @@ footer .btn.full-btn {
 footer {
     text-align: center;
 }
+.container {
+    margin-bottom: 100px;
+}
 footer {
     margin-bottom: 30px;
 }
@@ -31,6 +34,11 @@ footer {
 .roomEnd {
     border-bottom: 2px solid #dee2e6;
 }
+
+#table-actions {
+    margin-bottom: 150px;
+}
+
 .formsection {
     margin-bottom: 10px;
 }
